--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-minimal
 
 title: Hachu's Page
 name: Song HaYoung
+cover: https://user-images.githubusercontent.com/65321592/98815547-a519d900-246a-11eb-962d-a5cc51966203.jpg
+favicon: https://user-images.githubusercontent.com/65321592/98815547-a519d900-246a-11eb-962d-a5cc51966203.jpg
